--- a/lumana_cpq/odoo.conf
+++ b/lumana_cpq/odoo.conf
@@ -1,3 +1,5 @@
 [options]
-admin_passwd = $pbkdf2-sha512$600000$SOldS.mdk/KekxJibI3xXg$KLLtEpr0AS9mhpJ4eos3n.xfidwHjyzil.Z4kkS4Jv/fFUGetCe/cGD2GgMl7BORgegTyUoQjw3WEAEJqq/kfQ
-
+db_host = db
+db_port = 5432
+db_user = odoo
+db_password = odoo
